[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glomph-maze"
version = "0.1.0"
description = "Terminal-based Pac-Man game — Python rewrite of Glomph/MyMan"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
authors = [{ name = "RetroVerse Studios" }]
keywords = ["game", "pacman", "terminal", "retro", "curses"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Topic :: Games/Entertainment :: Arcade",
    "License :: OSI Approved :: BSD License",
]

[project.scripts]
glomph = "glomph.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
